bootstrap portfolio and form

--- a/externalcss/externalportfolio.html
+++ b/externalcss/externalportfolio.html
@@ -13,7 +13,7 @@
     </header>
 
     <section id="about">
-        <h2>About Me</h2>
+        <h2 id = "h2">About Me</h2>
         <p>I am a Computer Science student at Keshav Memorial Institute of Technology with a strong foundation in programming, web development, and AI/ML.</p>
     </section>
 
